--- a/index.html
+++ b/index.html
@@ -109,7 +109,26 @@
         </section>
 
         <section id="page4" class="page" style="display: none;">
-            <h1>Contact</h1>
+            <div class="outer-box">
+                <div class="left">
+                    <h1>Send us a message</h1>
+                    <div class="message-input">
+                        <input type="text" id="Name" placeholder="Name">
+                        <input type="email" id="Email" placeholder="Email">
+                        <input type="text" id="Subject" placeholder="Subject">
+                        <textarea id="Message" placeholder="Message"></textarea>
+                        <input type="submit" id="submit" value="Send Message">
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="contact-us">
+                        <h3>Contact us</h3>
+                        <div id="bar"></div>
+                        <pre><p>We're open for any suggestion or just to have a chat</p></pre>
+
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 
